--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "click>=8.3.0",
     "jinja2>=3.1.6",
     "pydantic>=2.12.0",
+    "pytest>=8.4.2",
     "pyyaml>=6.0.3",
 ]
 
