--- a/schedules/eips/frontier.yaml
+++ b/schedules/eips/frontier.yaml
@@ -6,6 +6,7 @@ constants:
   GAS_VERY_LOW: 3
   GAS_LOW: 5
   GAS_MID: 8
+  GAS_HIGH: 10
   GAS_EXT: 20
   GAS_CALL: 40
   GAS_LOG: 375
@@ -75,7 +76,7 @@ gas_costs:
     SLOAD: 50
     SSTORE: $GAS_ZERO  # Dynamic cost, see storage section
     JUMP: $GAS_MID
-    JUMPI: 10
+    JUMPI: $GAS_HIGH
     PC: $GAS_BASE
     MSIZE: $GAS_BASE
     GAS: $GAS_BASE
